--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
         </li>
         <li>
             <!-- <strong>CodeChef:</strong> -->
-            <a href="https://www.codechef.com/learn/dashboard" target="_blank">CodeChef</a>
+            <a href="https://www.codechef.com/users/arey_sumit">CodeChef</a>
         </li>
     </ul>
 
